# LookBack-Options-Sensitivity

Code/: Antithetic.h  CMakeCache.txt  CMakeLists.txt  CallLb.h  FiniteDifferenceTangentProcess.h  Greek.h  IEngine.h  IObservable.h  IObserver.h  LookBackOption  Makefile  Malliavin.h  Martingale.h  ObserverLb.h  Payoff.h  PayoffLb.h  PricingEngine.h  ReadME.md  cmake_install.cmake  main.cpp  mc.h  quantile.h
